--- a/demo/index.html
+++ b/demo/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" href="/node_modules/prismjs-package/prism.css"/>
+    <link rel="stylesheet" href="/build/styles.css"/>
   </head>
   <body>
     <div id='root'>
     </div>
-    <script src="/demo/bundle.js"></script>
+    <script src="/build/bundle.js"></script>
   </body>
 </html>
