--- a/demo/index.html
+++ b/demo/index.html
@@ -5,12 +5,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/node_modules/prismjs-package/prism.css"/>
     <link rel="stylesheet" href="/build/styles.css"/>
   </head>
   <body>
     <div id='root'>
     </div>
+    <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="/build/bundle.js"></script>
   </body>
 </html>
