--- a/demo/index.html
+++ b/demo/index.html
@@ -13,7 +13,7 @@
   <body>
     <div id='root'>
     </div>
-    <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
+    <script src="/node_modules/jquery/dist/jquery.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="/build/bundle.js"></script>
   </body>
