--- a/demo/index.html
+++ b/demo/index.html
@@ -7,6 +7,7 @@
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"/>
+		<link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"/>
 		<link rel="stylesheet" href="/node_modules/sweetalert/dist/sweetalert.css"/>
 		<link rel="stylesheet" href="/node_modules/prismjs-package/prism.css"/>
 		<link rel="stylesheet" href="/build/styles.css"/>
