[wip] upload button

--- a/demo/index.html
+++ b/demo/index.html
@@ -18,6 +18,9 @@
 		<script src="/node_modules/jquery/dist/jquery.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 		<script src="/node_modules/sweetalert/dist/sweetalert-dev.js"></script>
+		<script>
+			// window.UPLOAD_PATH = "http://localhost:3000/api/uploads/";
+		</script>
 		<script src="/build/bundle.js"></script>
 	</body>
 </html>
